fix editer overflow  display  problem

--- a/src/pages/editor/preindex.less
+++ b/src/pages/editor/preindex.less
@@ -3,7 +3,7 @@ body,
 #root {
   height: 100%;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto !important;
   font-family: 'Microsoft Yahei';
 }
 .layout {
@@ -104,22 +104,6 @@ body,
         bottom: 0;
         left: 0;
       }
-
-      .scrollBottom {
-        width: 100%;
-        height: 50px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-      }
-      .scrollRight {
-        width: 50px;
-        height: calc(100% - 50px);
-        position: absolute;
-        bottom: 0;
-        right: 0;
-      }
-
       .canvasBox {
         // margin:0;
         // padding: 0;
